--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 [firebase]
-pass_key = "components\\water-quality-prediction-65f06-firebase-adminsdk-jxitc-bd6157a1fd.json"
+pass_key = "components/water-quality-prediction-65f06-firebase-adminsdk-jxitc-bd6157a1fd.json"
 
